--- a/html/login/login.html
+++ b/html/login/login.html
@@ -4,120 +4,59 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
+		<title>登录</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		
+		<link rel="stylesheet" type="text/css" href="../../css/main.css"/>
 		<style>
 			.ui-page-login,
 			body {
 				width: 100%;
-				height: 100%;
 				margin: 0px;
 				padding: 0px;
+				background-image: url(../../images/login.png);
+			}						
+			
+			.logo-box{
+			    width: 68px;
+			    height: 68px;
+			    background: #3385ff;
+			    border-radius: 18px;   
+			    padding: 16px 9px;
+			    margin: 66px auto;
 			}
-			.mui-content{height: 100%;}
+			
 			.area {
 				margin: 20px auto 0px auto;
-			}
-			
-			.mui-input-group {
-				margin-top: 10px;
-			}
-			
-			.mui-input-group:first-child {
-				margin-top: 20px;
-			}
-			
-			.mui-input-group label {
-				width: 22%;
-			}
-			
-			.mui-input-row label~input,
-			.mui-input-row label~select,
-			.mui-input-row label~textarea {
-				width: 78%;
-			}
-			
-			.mui-checkbox input[type=checkbox],
-			.mui-radio input[type=radio] {
-				top: 6px;
-			}
-			
-			.mui-content-padded {
-				margin-top: 25px;
-			}
-			
-			.mui-btn {
-				padding: 10px;
-			}
-			
-			.link-area {
-				display: block;
-				margin-top: 25px;
-				text-align: center;
-			}
-			
-			.spliter {
-				color: #bbb;
-				padding: 0px 8px;
-			}
-			
-			.oauth-area {
-				position: absolute;
-				bottom: 20px;
-				left: 0px;
-				text-align: center;
-				width: 100%;
-				padding: 0px;
-				margin: 0px;
-			}
-			
-			.oauth-area .oauth-btn {
-				display: inline-block;
-				width: 50px;
-				height: 50px;
-				background-size: 30px 30px;
-				background-position: center center;
-				background-repeat: no-repeat;
-				margin: 0px 20px;
-				/*-webkit-filter: grayscale(100%); */
-				border: solid 1px #ddd;
-				border-radius: 25px;
-			}
-			
-			.oauth-area .oauth-btn:active {
-				border: solid 1px #aaa;
-			}
-			
-			.oauth-area .oauth-btn.disabled {
-				background-color: #ddd;
-			}
+			}						
 		</style>
 
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">登录</h1>
-		</header>
-		<div class="mui-content">
+		<div class="mui-content login">
+			<div class="logo-wrap">
+				<div class="logo-box">
+					<img src="../../images/logo.png" alt="" />
+				</div>
+			</div>
 			<form id='login-form' class="mui-input-group">
 				<div class="mui-input-row">
-					<label>账号</label>
 					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
 				</div>
 				<div class="mui-input-row">
-					<label>密码</label>
 					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="请输入密码">
 				</div>
 			</form>			
 			<div class="mui-content-padded">
-				<button id='login' class="mui-btn mui-btn-block mui-btn-primary">登录</button>
-				<div class="link-area"><a id='reg'>注册账号</a> <span class="spliter">|</span> <a id='forgetPassword'>忘记密码</a>
+				<div class="link-area">
+					<a id='forgetPassword'>忘记密码</a>
 				</div>
+				<button id='login' class="mui-btn mui-btn-block mui-btn-primary">登录</button>
 			</div>
 			<div class="mui-content-padded oauth-area">
-
+				<div class="link-area mui-text-center">
+					<a id="reg">手机号注册</a>
+				</div>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
@@ -223,7 +162,6 @@
 					var loginButton = doc.getElementById('login');
 					var accountBox = doc.getElementById('account');
 					var passwordBox = doc.getElementById('password');
-					var autoLoginButton = doc.getElementById("autoLogin");
 					var regButton = doc.getElementById('reg');
 					var forgetButton = doc.getElementById('forgetPassword');
 					loginButton.addEventListener('tap', function(event) {
@@ -242,17 +180,10 @@
 					$.enterfocus('#login-form input', function() {
 						$.trigger(loginButton, 'tap');
 					});
-					autoLoginButton.classList[settings.autoLogin ? 'add' : 'remove']('mui-active')
-					autoLoginButton.addEventListener('toggle', function(event) {
-						setTimeout(function() {
-							var isActive = event.detail.isActive;
-							settings.autoLogin = isActive;
-							app.setSettings(settings);
-						}, 50);
-					}, false);
+				
 					regButton.addEventListener('tap', function(event) {
 						$.openWindow({
-							url: 'reg.html',
+							url: './register.html',
 							id: 'reg',
 							preload: true,
 							show: {
@@ -301,7 +232,7 @@
 						return false;
 					};
 				});
-			}(mui, document));
+			}(mui, document));					
 		</script>
 	</body>
 
