--- a/html/myCenter/userSet.html
+++ b/html/myCenter/userSet.html
@@ -50,6 +50,15 @@
 				background-position: 0px 0px, 10px 10px;
 				background-size: 20px 20px;
 			}
+			.mui-backdrop {
+				position: fixed;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				z-index: 998;
+				background-color: #fff;
+			}
 		</style>
 	</head>
 
@@ -69,10 +78,10 @@
 				</a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a>用户名<span class="mui-pull-right">builder</span></a>
+					<a>用户名<span class="mui-pull-right userName">builder</span></a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a>介绍<span class="mui-pull-right">我爱阅读千百遍，却没时间写简介</span></a>
+					<a>介绍<span class="mui-pull-right userInfo">我爱阅读千百遍，却没时间写简介</span></a>
 				</li>
 			</ul>
 		</div>
@@ -250,6 +259,28 @@
 			    // 执行关闭
 			    old_back();
 			};
+			
+			
+			//编辑用户名 介绍
+			var wn = null;
+			function plusReady(){
+				// 预创建新窗口（显示在可视区域外）
+				wn=plus.webview.create('editUserInfo.html', 'edit', {top: '250px', bottom: '0px'});
+			}
+			if(window.plus){
+				plusReady();
+			}else{
+				document.addEventListener('plusready', plusReady, false);
+			}
+			
+			var callback = function(){
+				
+			}
+			var mask = mui.createMask(callback);
+			mui('.mui-content').on('tap', 'span.userName', function(e) {
+				wn.show();
+				mask.show();
+			});
 		</script>
 	</body>
 
