登录注册静态页面完成   验证js都还未写

--- a/html/login/login.html
+++ b/html/login/login.html
@@ -199,8 +199,8 @@
 					}, false);
 					forgetButton.addEventListener('tap', function(event) {
 						$.openWindow({
-							url: 'forget_password.html',
-							id: 'forget_password',
+							url: 'modifyPwd.html',
+							id: 'modifyPwd',
 							preload: true,
 							show: {
 								aniShow: 'pop-in'
