--- a/html/login/registInfo.html
+++ b/html/login/registInfo.html
@@ -17,7 +17,7 @@
 			    height: 72px;
 			    background: #DBDBDB;
 			    border-radius: 50%;
-			    margin: 50px auto;
+			    margin: 25px auto;
 			}
 		</style>
 	</head>
@@ -31,6 +31,20 @@
 				<div class="img-box">
 					<img src="" alt="" />
 				</div>
+			</div>
+			<form id='login-form' class="mui-input-group">
+				<div class="mui-input-row">
+					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入用户名">
+				</div>
+				<div class="mui-input-row">
+					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="请输入密码">
+				</div>
+				<div class="mui-input-row">
+					<input id='password1' type="password" class="mui-input-clear mui-input" placeholder="请确认密码">
+				</div>
+			</form>	
+			<div class="mui-content-padded">
+				<button id='submit' class="mui-btn mui-btn-block mui-btn-primary">确认</button>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
