图片轮播未改好

--- a/html/card/index.html
+++ b/html/card/index.html
@@ -155,22 +155,22 @@
 		<script>
 			mui.init();
 			mui.plusReady(function() {
-				var id="silderBanner",
-					styles={top:'38px',left:'0px',height:'200px',width:'100%',fullscreen:'false',position:'static',images:[{src:'../../images/muwu.jpg',width:"100%",verticalAlign:"middle"},{src:'../../images/shuijiao.jpg',width:'100%',verticalAlign:'middle'},{src:'../../images/yuantiao.jpg',width:'100%',verticalAlign:'middle'}]},
-					tags=null;
-				var view = new plus.nativeObj.ImageSlider(id, styles, tags);
-//					view.show("zoom-fade-out");
-					plus.webview.currentWebview().append(view);
+//				var id="silderBanner",
+//					styles={top:'38px',left:'0px',height:'200px',width:'100%',fullscreen:'false',position:'static',images:[{src:'../../images/muwu.jpg',width:"100%",verticalAlign:"middle"},{src:'../../images/shuijiao.jpg',width:'100%',verticalAlign:'middle'},{src:'../../images/yuantiao.jpg',width:'100%',verticalAlign:'middle'}]},
+//					tags=null;
+//				var view = new plus.nativeObj.ImageSlider(id, styles, tags);
+////					view.show("zoom-fade-out");
+//					plus.webview.currentWebview().append(view);
 				var group = new webviewGroup("articleList.html", {
 					items: [
 					{
 						id: "pullrefresh_sub.html",
 						url: "../public/articleList.html",
 						styles:{
-							top:"238px",
+							top:"38px",
 							bottom:"0"
 						},
-						extras: {}
+						extras: {hasBanner: true}
 					}, {
 						id: "pullrefresh_sub2.html",
 						url: "../public/articleList.html",
@@ -226,7 +226,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {closeFlag: true}
+						extras: {}
 					}],
 					onChange: function(obj) {
 						if(obj.index!=0){
@@ -255,6 +255,10 @@
 					}).show();
 					simulateLoading(0);				
 					plus.nativeUI.showWaiting();
+					if(wid == 'pullrefresh_sub.html'){
+						var sw = plus.webview.create('imgSlide.html', 'imgSlide');
+						sw.show()
+					}
 					var url = './'+wid+'.html';
 					var feedbackWebview = plus.webview.create(url, wid);
 					feedbackWebview.addEventListener('titleUpdate', function() {
