--- a/html/login/modifyPwd.html
+++ b/html/login/modifyPwd.html
@@ -42,7 +42,7 @@
 	</body>
 	<script type="text/javascript" src="../../js/mui.min.js" ></script>
 	<script>
-		mui('.mui-content-padded').on('tap', '.submit', function(){
+		mui('.mui-content-padded').on('tap', '#submit', function(){
 			var w = plus.webview.create('setPwd.html', 'setPwd.html');
 			w.show(); //
 		});
