--- a/html/login/setPwd.html
+++ b/html/login/setPwd.html
@@ -38,7 +38,7 @@
 	</body>
 	<script type="text/javascript" src="../../js/mui.min.js" ></script>
 	<script>
-		mui('.mui-content-padded').on('tap', '.submit', function(){
+		mui('.mui-content-padded').on('tap', '#submit', function(){
 			// 先到后台更新密码   然后登录到首页
 		});
 	</script>
