--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -109,14 +109,6 @@
 				background-color: #0062CC;
 				border-radius: 50px;
 			}
-			
-			.mui-slider .mui-slider-group .mui-slider-item img {
-				height: 200px;
-			}
-			
-			.slider-li {
-				display: none;
-			}
 		</style>
 	</head>
 
@@ -324,7 +316,8 @@
 					}
 
 					if(position == 'before') {
-						$li.insertAfter($('.slider-li'))
+//						$li.insertAfter($('.slider-li'))
+						table.prepend($li);
 					} else {
 						table.append($li);
 					}
