--- a/html/techDictionary/index.html
+++ b/html/techDictionary/index.html
@@ -106,22 +106,22 @@
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div class="mui-scroll">
 						<a class="mui-control-item mui-active" href="#item1mobile" data-wid="pullrefresh_sub9.html">
-							推荐
+							中国制造2025
 						</a>
 						<a class="mui-control-item" href="#item2mobile" data-wid="pullrefresh_sub10.html">
-							电子信息
+							创新驱动发展
 						</a>
 						<a class="mui-control-item" href="#item3mobile" data-wid="pullrefresh_sub11.html">
-							航天航空
+							大创创业万众创新
 						</a>
 						<a class="mui-control-item" href="#item4mobile" data-wid="pullrefresh_sub12.html">
-							生物制药
+							新一代人工智能
 						</a>
 						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub13.html">
-							新能源
+							互联网+
 						</a>
 						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub14.html">
-							现代互联网技术
+							共享经济
 						</a>
 						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub15.html">
 							数字娱乐
@@ -148,7 +148,7 @@
 							top:"38px",
 							bottom:"0"
 						},
-						extras: {}
+						extras: {navName: '中国制造2025', requestParam: 'all'}
 					}, {
 						id: "pullrefresh_sub10.html",
 						url: "../public/articleList.html",
@@ -156,7 +156,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {navName: '创新驱动发展', requestParam: 'all'}
 					}, {
 						id: "pullrefresh_sub11.html",
 						url: "../public/articleList.html",
@@ -164,7 +164,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {navName: '大创创业万众创新', requestParam: 'all'}
 					}, {
 						id: "pullrefresh_sub12.html",
 						url: "../public/articleList.html",
@@ -172,7 +172,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {navName: '新一代人工智能', requestParam: 'all'}
 					}, {
 						id: "pullrefresh_sub13.html",
 						url: "../public/articleList.html",
@@ -180,7 +180,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {navName: '互联网+', requestParam: 'all'}
 					}, {
 						id: "pullrefresh_sub14.html",
 						url: "../public/articleList.html",
@@ -188,7 +188,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {navName: '共享经济', requestParam: 'all'}
 					}, {
 						id: "pullrefresh_sub15.html",
 						url: "../public/articleList.html",
@@ -196,7 +196,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {navName: '数字娱乐', requestParam: 'all'}
 					}, {
 						id: "pullrefresh_sub16.html",
 						url: "../public/articleList.html",
@@ -204,7 +204,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {navName: '高端装备制造', requestParam: 'all'}
 					}],
 					onChange: function(obj) {
 						var c = document.querySelector(".mui-control-item.mui-active");
