--- a/html/login/login.html
+++ b/html/login/login.html
@@ -53,7 +53,7 @@
 			</div>
 			<form id='login-form' class="mui-input-group">
 				<div class="mui-input-row">
-					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
+					<input id='phoneNum' type="number" class="mui-input-clear mui-input" placeholder="请输入账号">
 				</div>
 				<div class="mui-input-row">
 					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="请输入密码">
@@ -73,17 +73,21 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.enterfocus.js"></script>
+		<script src="../../js/md5.min.js"></script>
 		<script src="../../js/login.js"></script>
 		<script>
 			(function($, doc) {
-				$.init({});
+				$.init({
+					swipeBack: true //启用右滑关闭功能
+				});
+				plus.navigator.setFullscreen(true);
 				$.plusReady(function() {
 					plus.screen.lockOrientation("portrait-primary");
 					var settings = app.getSettings();
 					var state = app.getState();
 					var mainPage = $.preload({
 						"id": 'main',
-						"url": '../myCenter/index'
+						"url": '../myCenter/index.html'
 					});
 					var main_loaded_flag = false;
 					mainPage.addEventListener("loaded",function () {
@@ -94,6 +98,8 @@
 						//可能执行太快，main页面loaded事件尚未触发就执行自定义事件，此时必然会失败
 						var id = setInterval(function () {
 							if(main_loaded_flag){
+								var w =  plus.webview.currentWebview();
+								w.close();
 								clearInterval(id);
 								$.fire(mainPage, 'show', null);
 								mainPage.show("pop-in");
@@ -170,17 +176,19 @@
 					}, 600);
 					//检查 "登录状态/锁屏状态" 结束
 					var loginButton = doc.getElementById('login');
-					var accountBox = doc.getElementById('account');
+					var phoneNumBox = doc.getElementById('phoneNum');
 					var passwordBox = doc.getElementById('password');
 					var regButton = doc.getElementById('reg');
 					var forgetButton = doc.getElementById('forgetPassword');
 					loginButton.addEventListener('tap', function(event) {
 						var loginInfo = {
-							account: accountBox.value,
-							password: passwordBox.value
+							phone: phoneNumBox.value,
+							password: md5(passwordBox.value) 
 						};
-						app.login(loginInfo, function(err) {
-							if (err) {
+						
+						console.log(JSON.stringify(loginInfo))
+						app.login(loginInfo, function(err){
+							if(err){
 								plus.nativeUI.toast(err);
 								return;
 							}
@@ -227,19 +235,10 @@
 					window.addEventListener('resize', function() {
 						oauthArea.style.display = document.body.clientHeight > 400 ? 'block' : 'none';
 					}, false);
-					//
-					var backButtonPress = 0;
+					
 					$.back = function(event) {
-						backButtonPress++;
-						if (backButtonPress > 1) {
-							plus.runtime.quit();
-						} else {
-							plus.nativeUI.toast('再按一次退出应用');
-						}
-						setTimeout(function() {
-							backButtonPress = 0;
-						}, 1000);
-						return false;
+						var w = plus.webview.currentWebview();
+						w.close();
 					};
 				});
 			}(mui, document));					
