--- a/html/myCenter/editUserInfo.html
+++ b/html/myCenter/editUserInfo.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css"/>
 		<style type="text/css">
